--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="about container">
               <div class="col-left">
                 <div class="about-img">
-                  <img src="./img/Will.jpg" alt="img">
+                  <img src="./img/will.jpg" alt="img">
                 </div>
               </div>
               <div class="col-right">
