Add do Curriculo

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="https://github.com/WillianDias1988" data-after="Home">Github</a></li>
                 <li><a href="https://www.linkedin.com/in/williandias01/" data-after="Service">LinkedIn</a></li>
                 <li><a href="mailto:williandias01@gmail.com" data-after="Contact">E-mail</a></li>
+                <li><a href="./CV/Willian_Dias.pdf" data-after="Contact">curriculum vitae</a></li>
               </ul>
             </div>
           </div>
