correcao da palavras

--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
                 <div class="service-item">
                   <div class="icon"><img src="https://img.icons8.com/fluency/48/000000/python.png"/></div>
                   <h2>Python: </h2>
-                  <p> inforações em prograsso</p>
+                  <p> informações em prograsso</p>
                 </div>
                 <div class="service-item">
                   <div class="icon"><img src="https://img.icons8.com/color/48/000000/c-sharp-logo.png"/></div>
                   <h2>C#</h2>
-                  <p> inforações em prograsso</p>
+                  <p> informações em prograsso</p>
                 </div>
                 <div class="service-item">
                   <div class="icon"><img src="https://img.icons8.com/external-flaticons-flat-flat-icons/64/000000/external-java-computer-programming-flaticons-flat-flat-icons.png"/></div>
                   <h2>Java</h2>
-                  <p> inforações em prograsso</p>
+                  <p> inforamções em prograsso</p>
                 </div>
                 <div class="service-item">
                   <div class="icon"><img src="https://img.icons8.com/color/48/000000/microsoft-sql-server.png"/></div>
                   <h2>SQL Server:</h2>
-                  <p> inforações em prograsso</p>
+                  <p> informações em prograsso</p>
                 </div>
               </div>
             </div>
