--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
               </div>
               <div class="service-bottom">
                 <div class="service-item">
-                  <div class="icon"><a href="https://williandias1988.github.io/Python/"<img src="https://img.icons8.com/fluency/48/000000/python.png"/a></div>
+                  <div class="icon"><img src="https://img.icons8.com/fluency/48/000000/python.png"/></div>
+                   <a href="https://williandias1988.github.io/Python"></a>
                   <h2>Python: </h2>
                   <p> informações em prograsso</p>
                 </div>
