--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
                   <p> informações em prograsso</p>
                 </div>
                 <div class="service-item">
-                  <div class="icon"><img src="https://img.icons8.com/color/48/000000/c-sharp-logo.png"/></div>
+                  <div class="icon"><a href="https://github.com/WillianDias1988/Csharp"><img src="https://img.icons8.com/color/48/000000/c-sharp-logo.png"/></a></div>
                   <h2>C#</h2>
                   <p> informações em prograsso</p>
                 </div>
                 <div class="service-item">
-                  <div class="icon"><img src="https://img.icons8.com/external-flaticons-flat-flat-icons/64/000000/external-java-computer-programming-flaticons-flat-flat-icons.png"/></div>
+                  <div class="icon"><a href="https://github.com/WillianDias1988/Java"><img src="https://img.icons8.com/external-flaticons-flat-flat-icons/64/000000/external-java-computer-programming-flaticons-flat-flat-icons.png"/></a></div>
                   <h2>Java</h2>
                   <p> inforamções em prograsso</p>
                 </div>
                 <div class="service-item">
-                  <div class="icon"><img src="https://img.icons8.com/color/48/000000/microsoft-sql-server.png"/></div>
+                  <div class="icon"><a href="https://github.com/WillianDias1988/Sqlserver"><img src="https://img.icons8.com/color/48/000000/microsoft-sql-server.png"/></a></div>
                   <h2>SQL Server:</h2>
                   <p> informações em prograsso</p>
                 </div>
