Atualização das informações do site

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               </div>
               <ul>
                 <li><a href="https://github.com/WillianDias1988" data-after="Home">Github</a></li>
-                <li><a href="https://www.linkedin.com/in/williandias01/" data-after="Service">LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/williandias01" data-after="Service">LinkedIn</a></li>
                 <li><a href="mailto:williandias01@gmail.com" data-after="Contact">E-mail</a></li>
                 <li><a href="./CV/Willian_Dias.pdf" data-after="Contact">curriculum vitae</a></li>
               </ul>
@@ -47,19 +47,38 @@
               </div>
               <div class="col-right">
                 <h1 class="section-title"; left>Sobre <span>mim</span></h1>
-                <h1><br>Olá, espero que esteja tudo bem com você!</br> Sou o Willian mas pode me chamar de Will, tenho 34 anos, esposo da Fabiana, papai do pequeno Andrew e um entusiasta da tecnologia, tive meu primeiro contato com computador lá em 1996 nas linhas de comando do DOS, mas acabei seguindo por outros caminhos e me distanciei da área de tecnologia! Por influência da família e amigos voltei a estudar programação e em 2014 iniciei minha graduação em ciência da computação, onde aprendi muito mais a fundo sobre programação e tecnologia, mesmo assim queria mais! 
-                  Então iniciei a Pós-graduação em Data Science, nesta jornada conheci tecnologias novas e que me abriram novos caminhos, um deles foi a programação em Python como havia aprendido Java na graduação prender Python foi muito divertido.
-                    
-                  Mesmo com os diplomas e o conhecimento teóricos, precisava da experiência, mas demorei um pouco para conseguir a minha tão sonhada vaga como programador, nesse período trabalhei como Help Desk e então recebi uma proposta de emprego para trabalhar com a linguagem C#, junto com SQL SERVER, não pensei duas vezes, e logo fui aprender sobre essas linguagens, hoje atuo como analista desenvolvedor de sistema júnior, mas continuo meus estudos atualmente estou aprendendo mais sobre a área de ciência de dados a qual me identifico e prendendo seguir carreira. 
+                <h1><br>Olá! Sou o Willian, mas pode me chamar de Will. Tenho 36 anos, sou esposo da Fabiana, pai do Andrew e da Maria Júlia.
+                  <br>
+                  <br>
+                  Desde cedo, fui fascinado pela tecnologia. Em 1996, tive meu primeiro contato com um computador, explorando as linhas de comando do DOS. 
+                  <br>
+                  Porém, acabei seguindo outros caminhos e me afastei da área de tecnologia por um tempo, o apoio da família e amigos me trouxe de volta ao mundo da programação.
+                    <br>
+                    <br>
+                  Em 2014, dei início à minha graduação em Ciência da Computação, onde mergulhei profundamente no estudo da programação e da tecnologia.
+                   <br> 
+                   <br>
+                  Sentindo que poderia alcançar mais, embarquei em uma pós-graduação em Data Science, onde descobri novas tecnologias que abriram novos horizontes. 
+                  Aprender Python, depois de ter dominado Java durante a graduação, foi especialmente empolgante.
+                  <br>
+                  <br>
+                  Apesar dos diplomas e conhecimento teórico adquiridos, sabia que precisava de experiência prática, demorei um pouco para conquistar minha tão sonhada vaga como programador; durante esse tempo, trabalhei como Help Desk, foi então, que surgiu uma oportunidade para trabalhar com C# e SQL Server, e não hesitei em aceitar.
+                  <br> 
+                  Dediquei-me a aprender essas linguagens rapidamente, hoje atuo como analista desenvolvedor sênior. 
+                  <br>
+                  <br>
+                  Continuo aprimorando meus conhecimentos, especialmente em ciência de dados e inteligência artificial, áreas que têm despertado cada vez mais meu interesse.
+                  <br>
+                  Minha jornada demonstra como a paixão pela tecnologia e a busca constante por aprendizado podem moldar uma carreira gratificante e em constante evolução.
               </h1>
               </div>
             </div>
         </section>
-        
         <section id="services">
             <div class="services container">
               <div class="service-top">
                 <h1 class="section-title">CONHEC<span>I</span>MENTO</h1>
+                <p> Clique no icone da linguagem para ir ao github</p>
               </div>
               <div class="service-bottom">
                 <div class="service-item">
